# crewai-gmail-automation

./: .dockerignore  .env_example  .gitignore  CLAUDE.md  COMMON_ERRORS.md  CONTRIBUTING.md  DOCKER_README.md  Dockerfile  EMAIL_SETUP.md  ERROR_LOGGER_UPGRADE.md  FEEDBACK_LOOP_FEATURES.md  FINAL_REVIEW_REPORT.md  FIXES_SUMMARY.md  LOGGING_AUDIT_CHECKLIST.md  OAUTH2_SETUP.md  PRIMARY_USER_SYSTEM.md  PSREADLINE_FIX_SUMMARY.md  README.md  REGRESSION_TESTING.md  STRIPE_SETUP.md  TEST_RESULTS_SUMMARY.md  clean_streamlit.py  cleanup_logs.bat  configure_logging.py  crew_with_api_test.py  detailed_app_inspection.py  docker-compose.yml  docker-entrypoint.sh  docker-setup.env.example  docker-start.sh  error_logs.json  error_logs_20250723.json  error_logs_20250727.json  error_logs_20250728.json  install-profile.bat  install-profile.ps1  monitor_app.bat  monitor_app.ps1  monitor_app.sh  page_source.html  (+36 more)
.claude/: settings.local.json
.claude/agents/: crewai-gmail-expert.md
.github/workflows/: cleanup-logs.yml
.streamlit/: config.toml
docs/: LOG_ROTATION_IMPLEMENTATION.md  WINDOWS_TASK_SCHEDULER_SETUP.md
knowledge/: user_facts.txt  user_preference.txt
scripts/: cleanup_logs.py
src/common/: README.md  logger.py  logger_example.py  security.py  windows_safe_handler.py
src/gmail_crew_ai/: crew.py  crew_oauth.py  crew_with_feedback.py  crew_with_feedback.py.tmp.128646.1753663090534  enhanced_crew_runner.py  models.py
src/gmail_crew_ai/auth/: __init__.py  oauth2_manager.py
tests/: README.md  Test-PSReadLineFix.Tests.ps1  test_logging.py
(+18 files in other folders)
