[project]
name = "gmail_crew_ai"
version = "0.1.0"
description = "gmail-crew-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "crewai[tools]==0.141.0",
    "typing-inspection==0.4.1",
]

[project.scripts]
gmail_crew_ai = "gmail_crew_ai.main:run"
run_crew = "gmail_crew_ai.main:run"
train = "gmail_crew_ai.main:train"
replay = "gmail_crew_ai.main:replay"
test = "gmail_crew_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
